# sonic-pins

./: .bazelrc  .gitignore  AGENTS.md  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE.bazel  alpine_switch.h  dummy.cc  dummy2.cc  format.sh  install_dependencies.sh  key.sh  non_bcr_deps.bzl  pins_infra_deps.bzl
bazel/: BUILD.cudd.bazel  BUILD.otg-models.bazel  BUILD.sonic-swss-common.bazel
dvaas/: BUILD.bazel  arriba_test_vector_validation.cc  arriba_test_vector_validation.h  dataplane_validation.cc  dataplane_validation.h  dataplane_validation_test.cc  dataplane_validation_test.expected  dvaas_detective.cc  dvaas_detective.h  dvaas_detective.proto  dvaas_detective_test.cc  dvaas_detective_test.expected  failure_post_processing.cc  failure_post_processing.h  failure_post_processing_test.cc  label.cc  label.h  labeler.cc  labeler.h  labeler_test.cc  mirror_testbed_config.cc  mirror_testbed_config.h  output_writer.h  packet_injection.cc  packet_injection.h  packet_trace.cc  packet_trace.h  packet_trace.proto  packet_trace_test.cc  port_id_map.cc  port_id_map.h  port_id_map_test.cc  switch_api.h  test_insights.cc  test_insights.h  test_insights_test.cc  test_insights_test.expected  test_run_validation.cc  test_run_validation.h  test_run_validation_test.cc  (+19 more)
fourward/: AGENTS.md  BUILD.bazel  README.md  fake_gnmi_service.h  fake_gnmi_service_test.cc  fourward_mirror_testbed.cc  fourward_mirror_testbed.h  fourward_mirror_testbed_test.cc  fourward_oracle.cc  fourward_oracle.h  fourward_oracle_e2e_test.cc  fourward_oracle_test.cc  fourward_pins_switch_port_test.cc  fourward_pins_switch_test.cc  fourward_server.cc  fourward_server.h  fourward_server_test.cc  fourward_switch.cc  fourward_switch.h  fourward_switch_test.cc  packet_bridge.cc  packet_bridge.h  packet_bridge_test.cc  test_vector_generation.cc  test_vector_generation.h  trace_conversion.cc  trace_conversion.h  trace_conversion_golden_test_runner.cc  trace_conversion_test.cc  trace_conversion_test.expected  trace_summary.cc  trace_summary.h  trace_summary_test.cc
gutil/: .bazelrc  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  assign_or_return.md  bluze.textproto  collections.h  collections_test.cc  format.sh  gutil_deps.bzl  io.cc  io.h  io_test.cc  overload.h  proto.cc  proto.h  proto_matchers.h  proto_matchers_test.cc  proto_ordering.cc  proto_ordering.h  proto_ordering_test.cc  proto_string_error_collector.h  proto_test.cc  proto_test.proto  status.cc  status.h  status_matchers.h  status_matchers_test.cc  status_test.cc  syslog_sink.cc  syslog_sink.h  table_entry_key.cc  table_entry_key.h  table_entry_key_test.cc  test_artifact_writer.cc  test_artifact_writer.h  test_artifact_writer_test.cc  test_artifact_writer_test.proto  testing.cc  (+7 more)
gutil/gutil/: BUILD.bazel  (+33 more)
lib/: BUILD.bazel  basic_switch.h  basic_switch_test.cc  gpins_control_device.cc  gpins_control_device.h  gpins_control_interface.cc  gpins_control_interface.h  ixia_helper.cc  ixia_helper.h  ixia_helper.proto  ixia_helper_test.cc  ixia_protocol_helper.cc  ixia_protocol_helper.h  ixia_protocol_helper_test.cc  lacp_ixia_helper.cc  lacp_ixia_helper.h  lacp_ixia_helper_test.cc  otg_helper.cc  otg_helper.h  otg_helper_test.cc  pins_control_device.cc  pins_control_device.h
p4_fuzzer/: BUILD.bazel  annotation_util.cc  annotation_util.h  constraints.cc  constraints.h  constraints_test.cc  constraints_util.cc  constraints_util.h  constraints_util_integration_test.cc  fuzz_util.cc  fuzz_util.h  fuzz_util_test.cc  fuzzer.proto  fuzzer_config.cc  fuzzer_config.h  fuzzer_config_test.cc  fuzzer_showcase_test.cc  fuzzer_tests.cc  fuzzer_tests.h  mutation.cc  mutation.h  oracle_util.cc  oracle_util.h  oracle_util_test.cc  switch_state.cc  switch_state.h  switch_state_assert_entry_equality_test.expected.output  switch_state_assert_entry_equality_test_runner.cc  switch_state_test.cc  table_entry_key.cc  table_entry_key.h  table_entry_key_test.cc  test_utils.cc  test_utils.h
p4_pdpi/: BUILD.bazel  README.md  built_ins.cc  built_ins.h  built_ins_test.cc  entity_keys.cc  entity_keys.h  entity_keys_test.cc  helpers.cc  helpers.h  helpers_test.cc  ir.cc  ir.h  ir.proto  ir_properties.cc  ir_properties.h  ir_properties_test.cc  ir_to_ir_test.cc  ir_tools.cc  ir_tools.h  ir_tools_test.cc  names.cc  names.h  names_test.cc  p4_runtime_client_interceptor.h  p4_runtime_matchers.cc  p4_runtime_matchers.h  p4_runtime_matchers_test.cc  p4_runtime_session.cc  p4_runtime_session.h  p4_runtime_session_extras.cc  p4_runtime_session_extras.h  p4_runtime_session_extras_test.cc  p4_runtime_session_mocking.cc  p4_runtime_session_mocking.h  p4_runtime_session_test.cc  p4info_union.cc  p4info_union_lib.cc  p4info_union_lib.h  p4info_union_test.cc  (+25 more)
p4_symbolic/: BUILD.bazel  deparser.cc  deparser.h  deparser_test.cc  main.cc  parser.cc  parser.h  test_util.cc  test_util.h  z3_util.cc  z3_util.h  z3_util_test.cc
p4rt_app/: BUILD.bazel  README.md  p4rt.cc
sai_p4/: BUILD.bazel  capabilities.cc  capabilities.h  capabilities.proto  capabilities_test.cc
tests/: BUILD.bazel  README.md  thinkit_gnmi_interface_tests.cc  thinkit_gnmi_interface_tests.h  thinkit_gnmi_interface_util.cc  thinkit_gnmi_interface_util.h  thinkit_gnmi_interface_util_tests.cc  thinkit_gnmi_subscribe_tests.cc  thinkit_gnmi_subscribe_tests.h  thinkit_sanity_tests.cc  thinkit_sanity_tests.h  thinkit_util.h
thinkit/: BUILD.bazel  README.md  bazel_test_environment.cc  bazel_test_environment.h  bazel_test_environment_test.cc  control_device.h  control_interface.h  generic_testbed.h  generic_testbed_fixture.h  generic_testbed_test.cc  mirror_testbed.h  mirror_testbed_fixture.h  mock_control_device.h  mock_control_device_test.cc  mock_control_interface.h  mock_control_interface_test.cc  mock_generic_testbed.h  mock_generic_testbed_test.cc  mock_mirror_testbed.h  mock_mirror_testbed_test.cc  mock_ssh_client.h  mock_ssh_client_test.cc  mock_switch.h  mock_switch_test.cc  mock_test_environment.h  mock_test_environment_test.cc  packet_generation_finalizer.h  ssh_client.h  switch.h  switch_test.cc  test_environment.h
(+1158 files in other folders)
