load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

filegroup(
    name = "all",
    srcs = glob(["**"]),
)

configure_make(
    name = "cudd",
    configure_options = ["--enable-obj"],
    lib_name = "libcudd",
    lib_source = ":all",
    make_commands = ["make install -j8"],
    visibility = ["//visibility:public"],
)
