load("@grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "otg_proto",
    srcs = ["artifacts/otg.proto"],
    deps = [
        "@protobuf//:descriptor_proto",
        "@protobuf//:empty_proto",
    ],
)

cc_proto_library(
    name = "otg_cc_proto",
    deps = [":otg_proto"],
)

cc_grpc_library(
    name = "otg_grpc_proto",
    srcs = [":otg_proto"],
    generate_mocks = True,
    grpc_only = True,
    deps = [":otg_cc_proto"],
)
